# remodelator

./: .coverage  .firebaserc  .gitignore  ACTION_PLAN.md  ARCHITECTURE.md  CLIENT_UNBLOCKER_LETTER.md  DEPLOYMENT_PLAN.md  PRODUCTION_READINESS.md  README.md  UI_REFACTOR_PLAN.md  firebase.json  pyproject.toml  requirements-dev.txt  requirements.txt
Remodelator 2/: Global.asax
_notes_/: app-state-business-case-review.md  notes 3.2
data/: .gitkeep  .lock.admin-audit-prune  .lock.admin-db-rebuild  .node_localstorage.json-shm  .node_localstorage.json-wal  demo.backup.json  remodelator.db  remodelator.db-shm  session.json  test_flush_1514.db
docs/: API_ENDPOINTS_GENERATED.md  API_REFERENCE.md  BATCH_A_DEMO_NOTE.md  BATCH_A_TASKBOARD.md  BLOCKERS_AND_ROADMAP.md  DEPLOYMENT_HARDENING_CHECKLIST.md  FRONTEND_HANDOFF.md  LAUNCH_EVIDENCE_CHECKLIST.md  MIGRATION_RECONCILIATION.md  PRODUCTION_OPERATIONS.md  README.md  SQLITE_OPERATIONS_RUNBOOK.md  TECH_DECISIONS.md  UI_UX_INTERACTIONS.md
proposal/: Remodelator_2_Architecture_Documentation.md  Remodelator_v5_Sales_Marketing.txt
scripts/: README.md  bootstrap_local.sh  capture_release_evidence.sh  check_markdown_links.py  ci_sqlite_probes.sh  dead_code_check.sh  demo_local.sh  evidence_index.sh  evidence_prune.sh  generate_api_endpoints_doc.py  latest_evidence_status.sh  quality_gate.sh  run_api.sh  run_web.sh  stripe_release_gate.sh  stripe_sandbox_probe.py  stripe_webhook_golden_path.py
tests/: conftest.py  test_api_app_factory.py  test_api_dependencies.py  test_api_endpoint_doc_generation.py  test_api_flow.py  (+23 more)
(+682 files in other folders)
