[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remodelator-vnext"
version = "0.1.0"
description = "Remodelator vNext local simulation product"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12,<1.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "jinja2>=3.1,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
  "reportlab>=4.2,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.12,<1.0",
]

[project.scripts]
remodelator = "remodelator.interfaces.cli.main:run"
remodelator-api = "remodelator.interfaces.api.run:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
